update the new papers

--- a/模型与算法.md
+++ b/模型与算法.md
@@ -2,7 +2,7 @@ hi😊, 这是一份专注于LLM-模型与算法（Model & Algorithm）领域的
 
 基于当前时间（2026年1月），回顾过去10年（特别是2017年Transformer诞生至今），大模型的发展经历了从**架构奠基**、**规模定律验证**、**指令对齐**、**开源爆发**到**深度推理与极致效率**的五个阶段。
 
-以下精选了**22篇**重塑了该领域的经典论文，按时间脉络排序，涵盖了从基础架构到最新的推理模型（Reasoning Models）的演进。
+以下精选了 **25篇** 重塑了该领域的经典论文，按时间脉络排序，涵盖了从基础架构到最新的推理模型（Reasoning Models）的演进。
 
 ---
 
@@ -281,7 +281,7 @@ hi😊, 这是一份专注于LLM-模型与算法（Model & Algorithm）领域的
 ---
 ### 2026年视角的展望：大模型技术的“新常态”
 
-回看这份增补的名单，**2025-2026年**的技术特征非常鲜明：
+**2025-2026年** 的技术特征非常鲜明：
 
 1.  **不再迷信SFT**：DeepSeek-R1 证明了强化学习（RL）可以让模型自我进化，SFT数据不再是壁垒，**RLHF变成了RL（Without Human Feedback）**。
 2.  **不再迷信Transformer**：Jamba 和 MatMul-Free 证明了Transformer不是终点，**混合架构**和**非GPU架构**开始登上舞台。
